# marketmind

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  MARKETMIND_STATUS.md  Makefile  README.md  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: marketmind_pipeline.py
frontend/: package-lock.json
frontend/app/: page.tsx
infrastructure/docker/: Dockerfile  Dockerfile.worker  docker-compose.yml
infrastructure/docker/grafana/provisioning/dashboards/: dashboards.yml  marketmind-api.json
infrastructure/docker/init/: 01_init.sql
infrastructure/docker/prometheus/: prometheus.yml
scripts/: check_leakage.py  train_clean.py
src/: config.py
src/agents/: analysis_agent.py  data.py  forecasting_utils.py  graph.py  insight_agent.py  llm.py  query_agent.py  retrieval_agent.py  state.py
src/api/: main.py
src/collection/: augment_dataset.py  collect_osm.py  collect_places.py  collect_weather.py  generate_synthetic_data.py  recompute_scores.py
src/features/: feature_pipeline.py
src/models/: register_model.py  train.py
src/serving/: maps.py
src/workers/: ml_worker.py
tests/unit/: test_collection.py  test_config.py
