[tool.poetry]
name = "marketmind"
version = "0.1.0"
description = "Intelligent marketplace analytics platform — Rabat, Morocco"
authors = ["AABIL Rime <rimeaabil@gmail.com>"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
# Geospatial & data collection
osmnx = "^2.0.1"
geopandas = "^1.0.1"
shapely = "^2.0.6"
h3 = "^4.1.0"
# Data engineering
pandas = "^2.2.3"
polars = "^1.17.1"
pyarrow = "^18.1.0"
# Database
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
geoalchemy2 = "^0.15.2"
alembic = "^1.14.0"
# API & validation
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"
# HTTP
httpx = "^0.28.1"
requests = "^2.32.3"
# Config
python-dotenv = "^1.0.1"
# ML (will expand in Phase 3)
scikit-learn = "^1.6.0"
xgboost = "^2.1.3"
# Utilities
rich = "^13.9.4"
typer = "^0.15.1"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
